--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "radix-vue": "^1.4.9",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "vaul-vue": "^0.1.0",
     "vee-validate": "^4.12.5",
     "vitepress": "^1.0.0-rc.44",
     "vue": "^3.4.15",
