Started Analytics Opt Out Popup. Kind of works matomo just sucks

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "debounce": "^2.0.0",
+    "http-jsonp": "^1.1.1",
     "lodash": "^4.17.21",
     "lucide-vue-next": "^0.344.0",
     "pinia": "^2.1.7",
@@ -31,6 +32,7 @@
     "vee-validate": "^4.12.5",
     "vitepress": "^1.0.0-rc.44",
     "vue": "^3.4.15",
+    "vue-cookie-accept-decline": "^6.1.0",
     "vue-matomo": "^4.2.0",
     "vue-multi-number-input": "^0.1.5",
     "vue-router": "^4.2.5",
