--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emeraldpay/hashicon": "^0.5.2",
     "@formkit/auto-animate": "^0.8.1",
+    "@internationalized/date": "^3.5.2",
     "@logto/vue": "^2.2.2",
     "@polkadot/vue-identicon": "^3.6.5",
     "@vee-validate/zod": "^4.12.5",
@@ -25,7 +26,7 @@
     "lodash": "^4.17.21",
     "lucide-vue-next": "^0.344.0",
     "pinia": "^2.1.7",
-    "radix-vue": "^1.4.9",
+    "radix-vue": "^1.7.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul-vue": "^0.1.0",
