--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "wrangler": "^3.0.0"
   },
   "dependencies": {
+    "@tensorflow/tfjs-node": "3.18.0",
     "itty-router": "^4.0.27",
     "jose": "^5.2.3",
-    "jsdocs": "^0.0.1"
+    "jsdocs": "^0.0.1",
+    "nsfwjs": "^4.1.0",
+    "uuid": "^9.0.1"
   }
 }
