--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-src/components/ui
+src/components/ui/*
+!src/components/ui/dialog*
 .DS_Store
 dist
 dist-ssr
