--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx shadcn-vue@latest add accordion alert alert-dialog avatar breadcrumb button calendar card checkbox collapsible command dialog drawer dropdown-menu form hover-card input label pin-input popover progress radio-group select separator sonner switch tabs tooltip && vite build",
+    "build": "npx shadcn-vue@latest add --overwrite accordion alert alert-dialog avatar breadcrumb button calendar card checkbox collapsible command dialog drawer dropdown-menu form hover-card input label pin-input popover progress radio-group select separator sonner switch tabs tooltip && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
@@ -14,6 +14,7 @@
     "@formkit/auto-animate": "^0.8.1",
     "@internationalized/date": "^3.5.2",
     "@logto/vue": "^2.2.2",
+    "@vee-validate/zod": "^4.12.8",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
@@ -25,14 +26,15 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5",
-    "vaul-vue": "^0.1.0",
-    "vee-validate": "^4.12.5",
+    "vaul-vue": "^0.1.2",
+    "vee-validate": "^4.12.8",
     "vue": "^3.4.15",
     "vue-matomo": "^4.2.0",
     "vue-router": "^4.2.5",
     "vue-sonner": "^1.1.2",
     "vue-tel-input": "^8.3.1",
-    "vue3-simple-icons": "^11.0.0"
+    "vue3-simple-icons": "^11.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
