--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vitejs/plugin-vue": "^5.0.3",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.49.0",
+    "@vue/eslint-config-prettier": "",
     "eslint-plugin-vue": "^9.17.0",
     "postcss": "^8.4.35",
     "prettier": "^3.0.3",
