api: setup schema, validator and class function for usernames

--- a/worker/package.json
+++ b/worker/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@tensorflow/tfjs-node": "3.18.0",
+    "ajv": "^8.14.0",
+    "ajv-formats": "^3.0.1",
     "bad-words": "^3.0.4",
     "itty-router": "^4.0.27",
     "jose": "^5.2.3",
