--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mxs-account-home",
+  "name": "logto-account-dashboard",
   "version": "0.0.0",
   "private": true,
   "type": "module",
