all: made it so legal links redirect to user defined legal page

--- a/web/.env.sample
+++ b/web/.env.sample
@@ -17,5 +17,5 @@ VITE_MATOMO_ENDPOINT=Optional
 ## Extra customisable options
 # the email in the footer of the dashboard
 VITE_SUPPORT_EMAIL=Requried
-# the url that users can visit to view the privacy policy/terms of service of your brand
+# the url that users can visit to view the privacy policy/terms of service of your brand. needs to be a full url
 VITE_LEGAL_URL=Requried
