--- a/web/package.json
+++ b/web/package.json
@@ -17,10 +17,8 @@
     "@internationalized/date": "^3.5.2",
     "@logto/js": "^4.1.1",
     "@logto/vue": "^2.2.2",
-    "@vee-validate/zod": "^4.12.8",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.7",
-    "canvas": "^2.11.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "esm-seedrandom": "^3.0.5",
@@ -32,18 +30,16 @@
     "radix-vue": "^1.7.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.4.5",
     "vaul-vue": "^0.1.2",
-    "vee-validate": "^4.12.8",
     "vue": "^3.4.15",
     "vue-matomo": "^4.2.0",
     "vue-router": "^4.2.5",
     "vue-sonner": "^1.1.2",
     "vue-tel-input": "^8.3.1",
-    "vue3-simple-icons": "^11.0.0",
-    "zod": "^3.23.8"
+    "vue3-simple-icons": "^11.0.0"
   },
   "devDependencies": {
+    "typescript": "^5.4.5",
     "@rushstack/eslint-patch": "^1.3.3",
     "@types/node": "^20.11.24",
     "@vitejs/plugin-vue": "^5.0.3",
