--- a/worker/wrangler.toml.sample
+++ b/worker/wrangler.toml.sample
@@ -1,20 +1,26 @@
-name = ""
-main = "src/index.js"
-compatibility_flags = [ "nodejs_compat" ]
-compatibility_date = "2024-03-04"
+## Sample Wrangler Configuration File
+name = "" # the name of the worker. was either set if you have already created the worker or will be set when you deploy
+main = "src/index.js" # dont edit
+compatibility_flags = [ "nodejs_compat" ] # dont edit
+compatibility_date = "2024-03-04" # dont edit
+workers_dev = false # dont edit
+minify = true # dont edit
 
+# Required kv namespaces for the api to work. create them in the dashboard or using wrangler and put the ids here
+# MAKE SURE TO USE THE EXACT NAMES BELOW
 kv_namespaces = [
 	{ binding = "MFARequiredTokens", id = "" },
-	{ binding = "LogtoAccessToken", id = "" }
+	{ binding = "LogtoAccessToken", id = "" },
+	{ binding = "UsernameChangeTimelimit", id = "" }
 ]
 
 [vars]
-LOGTO_DOMAIN = ''
-JWKS_URI = ''
-ISSUER = ''
-CORS = ''
-AVATAR_API = ''
-ENABLE_NSFW_CHECK = 1 # truthy value
+CORS = "" # the domain of the web dashboard
+ISSUER = "" # the logto domain plus '/oidc'
+JWKS_URI = "" # the logto domain plus '/oidc/jwks'
+LOGTO_DOMAIN = "" # the domain of your logto installation
+ENABLE_NSFW_CHECK = 0 # any truthy value
+AVATAR_API = "" # must be valid if ENABLE_NSFW_CHECK is true
 
 [placement]
-mode = "smart"
+mode = "smart" # im just testing this setting its not actually required nor will it really do anything
