--- a/web/.env.sample
+++ b/web/.env.sample
@@ -13,6 +13,7 @@ VITE_LOGTO_RESOURCES='[]'
 VITE_API_WORKER_ENDPOINT=Requried
 # the endpoint of a matomo installation. if omitted matomo tracking will be disabled
 VITE_MATOMO_ENDPOINT=Optional
+VITE_MATOMO_SITE_ID=Optional
 
 ## Extra customisable options
 # the email in the footer of the dashboard
