--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,6 @@
     "@logto/js": "^4.1.1",
     "@logto/vue": "^2.2.2",
     "@vueuse/core": "^10.9.0",
-    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "esm-seedrandom": "^3.0.5",
@@ -28,6 +27,7 @@
     "lodash": "^4.17.21",
     "lucide-vue-next": "^0.378.0",
     "radix-vue": "^1.7.3",
+    "redaxios": "^0.5.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.15",
@@ -38,7 +38,6 @@
     "vue3-simple-icons": "^11.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.4.5",
     "@rushstack/eslint-patch": "^1.3.3",
     "@types/node": "^20.11.24",
     "@vitejs/plugin-vue": "^5.0.3",
@@ -49,6 +48,7 @@
     "postcss": "^8.4.35",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.5",
     "vite": "^5.0.11"
   }
 }
