--- a/web/package.json
+++ b/web/package.json
@@ -30,6 +30,7 @@
     "redaxios": "^0.5.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "vaul-vue": "^0.1.2",
     "vue": "^3.4.15",
     "vue-matomo": "^4.2.0",
     "vue-router": "^4.2.5",
