--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -1,4 +1,4 @@
-name = "mxs-account-worker"
+name = "mxs-demo-account-worker"
 main = "src/index.js"
 compatibility_flags = [ "nodejs_compat" ]
 compatibility_date = "2024-03-04"
@@ -6,18 +6,22 @@ workers_dev = false
 minify = true
 
 kv_namespaces = [
-	{ binding = "MFARequiredTokens", id = "305251b3e929457fadad216a3fe20f36" },
-	{ binding = "LogtoAccessToken", id = "317e47e4c54c460da74f8d7755e6beee" },
-	{ binding = "UsernameChangeTimelimit", id = "72523871c5484c7683abdd7b6d39c04d" }
+	{ binding = "MFARequiredTokens_DEMO", id = "afe17ed595224defae86a47e9d4f89f5" },
+	{ binding = "LogtoAccessToken_DEMO", id = "fd6bd0bbc30847aea099b40404587a5b" },
+	{ binding = "UsernameChangeTimelimit_DEMO", id = "27676d7055804c07bd533afedfda36db" }
 ]
 
 [vars]
 AVATAR_API = "https://check.mxs.app"
-CORS = "https://myid.mxs.app"
-ISSUER = "https://id.mxs.app/oidc"
-JWKS_URI = "https://id.mxs.app/oidc/jwks"
-LOGTO_DOMAIN = "https://id.mxs.app"
+CORS = "https://demo-id.mxs.app"
+ISSUER = "https://logto-development.mxs.app/oidc"
+JWKS_URI = "https://logto-development.mxs.app/oidc/jwks"
+LOGTO_DOMAIN = "https://logto-development.mxs.app"
+LOGTO_CORE_RESOURCE = "https://v32424.logto.app/api"
 ENABLE_NSFW_CHECK = 1
+
+[triggers]
+crons = ["0 */2 * * *"]
 
 [placement]
 mode = "smart"
