web/functions: added libs and migrated all middleware

--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "@logto/js": "^4.1.1",
     "@logto/vue": "^2.2.2",
     "@vueuse/core": "^10.9.0",
+    "bad-words": "^3.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "esm-seedrandom": "^3.0.5",
@@ -28,6 +29,7 @@
     "lucide-vue-next": "^0.378.0",
     "radix-vue": "^1.7.3",
     "redaxios": "^0.5.1",
+    "superstruct": "^2.0.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul-vue": "^0.1.2",
