--- a/package.json
+++ b/package.json
@@ -39,7 +39,12 @@
     "vue-router": "^4.2.5",
     "vue-sonner": "^1.1.2",
     "vue-tel-input": "^8.3.1",
-    "vue3-simple-icons": "^11.0.0"
+    "vue3-simple-icons": "^11.0.0",
+    "@cf-wasm/photon": "^0.1.20",
+    "itty-router": "^5.0.17",
+    "jose": "^5.2.3",
+    "jsdocs": "^0.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
@@ -53,6 +58,7 @@
     "prettier": "^3.0.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.5",
-    "vite": "^5.0.11"
+    "vite": "^5.0.11",
+    "wrangler": "^3.59.0"
   }
 }
