--- a/wrangler.sample.toml
+++ b/wrangler.sample.toml
@@ -5,7 +5,7 @@ compatibility_date = "2024-03-04"
 pages_build_output_dir = "./dist"
 
 kv_namespaces = [
-	{ binding = "MFARequiredTokens", id = "305251b3e929457fadad216a3fe20f36" },
+	{ binding = "MfaStatus", id = "305251b3e929457fadad216a3fe20f36" },
 	{ binding = "LogtoAccessToken", id = "317e47e4c54c460da74f8d7755e6beee" },
 	{ binding = "UsernameChangeTimelimit", id = "72523871c5484c7683abdd7b6d39c04d" }
 ]
