chore: updated wrangler conf to include preview vars for this branch

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,7 +9,7 @@ kv_namespaces = [
 	{ binding = "UsernameChangeTimelimit", id = "a763c7ba685346c89d37b3ffce90c7c5" }
 ]
 
-[vars]
+[vars.production]
 AVATAR_API = "https://check.mxs.app"
 LOGTO_DOMAIN = "https://id.mxs.app"
 LOGTO_DEFAULT_RESOURCE = "https://default.logto.app/api"
@@ -22,6 +22,21 @@ VITE_LOGTO_RESOURCES = '["https://default.logto.app/api"]'
 VITE_MATOMO_ENDPOINT = "https://insights.vee.city"
 VITE_MATOMO_SITE_ID = 2
 VITE_ROOT = "https://myid.mxs.app"
+VITE_SUPPORT_EMAIL = "support@mxs.email"
+
+[vars.preview]
+AVATAR_API = "https://check.mxs.app"
+LOGTO_DOMAIN = "https://id.mxs.app"
+LOGTO_DEFAULT_RESOURCE = "https://default.logto.app/api"
+ENABLE_NSFW_CHECK = 1
+VITE_LEGAL_URL = "https://cookiesandyou.com"
+VITE_LOGTO_APPID = "yw2r46h73tzfk8z4bo1go"
+VITE_LOGTO_CORE_RESOURCE = "https://default.logto.app/api"
+VITE_LOGTO_ENDPOINT = "https://id.mxs.app/"
+VITE_LOGTO_RESOURCES = '["https://default.logto.app/api"]'
+VITE_MATOMO_ENDPOINT = "https://insights.vee.city"
+VITE_MATOMO_SITE_ID = 2
+VITE_ROOT = "https://client-feature-autoconfigure.mxs-myid.pages.dev/"
 VITE_SUPPORT_EMAIL = "support@mxs.email"
 
 [placement]
