fix: var layout

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -38,7 +38,7 @@ vars = [
 	{ VITE_LOGTO_APPID = "yw2r46h73tzfk8z4bo1go" },
 	{ VITE_LOGTO_CORE_RESOURCE = "https://default.logto.app/api" },
 	{ VITE_LOGTO_ENDPOINT = "https://id.mxs.app/" },
-	{ VITE_LOGTO_RESOURCES = '["https://default.logto.app/api"]' },
+	{ VITE_LOGTO_RESOURCES = ["https://default.logto.app/api"] },
 	{ VITE_MATOMO_ENDPOINT = "https://insights.vee.city" },
 	{ VITE_MATOMO_SITE_ID = 2 },
 	{ VITE_ROOT = "https://client-feature-autoconfigure.mxs-myid.pages.dev" },
