updated variable explinations

--- a/wrangler.sample.toml
+++ b/wrangler.sample.toml
@@ -40,7 +40,9 @@ VITE_LEGAL_URL = Requried
 # Please set these values using the wrangler cli: https://developers.cloudflare.com/workers/wrangler/commands/#secret
 LOGTO_APP_ID = Required - Set via wrangler cli!
 LOGTO_APP_SECRET = Required - Set via wrangler cli!
+# the url of your logto service. if you are using logto cloud it may look like https://[your_tenant].logto.app
 LOGTO_DOMAIN = "https://id.mxs.app"
+# the default resource of your logto application. If you are on a self hosted instance it will be "https://default.logto.app/api", if you are using logto cloud it will look someting like "https://v12345.logto.app/api"
 LOGTO_DEFAULT_RESOURCE = "https://default.logto.app/api"
 
 # settings for avatar nsfw checking. use in conjunction with https://github.com/t2vee/nsfwjs-avatar-service
