updated appid for my personal instance

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -15,7 +15,7 @@ LOGTO_DOMAIN = "https://id.chai.pub"
 LOGTO_DEFAULT_RESOURCE = "https://default.logto.app/api"
 ENABLE_NSFW_CHECK = 1
 VITE_LEGAL_URL = "https://cookiesandyou.com"
-VITE_LOGTO_APPID = "yw2r46h73tzfk8z4bo1go"
+VITE_LOGTO_APPID = "3ibpo180hpft3qjrkrt00"
 VITE_LOGTO_CORE_RESOURCE = "https://default.logto.app/api"
 VITE_LOGTO_ENDPOINT = "https://id.chai.pub/"
 VITE_LOGTO_RESOURCES = '["https://default.logto.app/api"]'
